--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -140,6 +140,7 @@
   color: #e48d48; 
 }
 .play {
+  position: relative;
   width: 530rpx;
   height: 152rpx;
   background: url('https://gengxin.odao.com/update/h5/wangcai/common/pk-btn.png') no-repeat;
@@ -260,5 +261,5 @@
   top: 0;
   width: 100%;
   height: 100%;
-  z-index: 2;
+  z-index: 3;
 } 
