--- a/app.wxss
+++ b/app.wxss
@@ -72,5 +72,12 @@
   background: #8b6efd;
 }
 
-
+ .mask {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 3;
+} 
 
